@@ -19,19 +19,20 @@
 # *	 http://www.gnu.org/copyleft/gpl.html
 # *
 # */
-sys.path.append( os.path.join ( os.path.dirname(__file__),'resources','lib') )
 from Plugins.Extensions.archivCZSK.archivczsk import ArchivCZSK
-import re
-import util,xbmcprovider,xbmcutil
-import mtrsk
+from tools_xbmc.contentprovider.xbmcprovider import XBMCMultiResolverContentProvider
+from tools_xbmc.compat import XBMCCompatInterface
+from .mtrsk import MtrSkContentProvider
 
 __scriptid__   = 'plugin.video.mtr.sk'
 __scriptname__ = 'mtr.sk'
 __addon__ = ArchivCZSK.get_xbmc_addon(__scriptid__)
 __language__   = __addon__.getLocalizedString
 
-settings = {'downloads':__addon__.getSetting('downloads'),'quality':__addon__.getSetting('quality')}
+def mtr_run(session, params):
+	settings = {'downloads':__addon__.getSetting('downloads'), 'quality':__addon__.getSetting('quality')}
+	XBMCMultiResolverContentProvider(MtrSkContentProvider(), settings, __addon__, session).run(params)
 
-xbmcprovider.XBMCMultiResolverContentProvider(mtrsk.MtrSkContentProvider(),settings,__addon__,session).run(params)
 
-
+def main(addon):
+	return XBMCCompatInterface(mtr_run)
